--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-<title> Организация празников </title>
+<title> Организация праздников </title>
 	<link rel="stylesheet" href="style.css"
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
@@ -87,12 +87,12 @@
 <div>
 <h1 class="h1Left">О компании </h1></div>
 <div class="text">
-Здравствуйте, вас приветствует компания "name"! Мы готовы предоставить вам услуги по проведению праздика и торжевств!
+Здравствуйте, вас приветствует компания "name"! Мы готовы предоставить вам услуги по проведению праздника и торжевств!
 </p>
 <p>
 Работаем в  этой сфере с 2011 года. Мы хорошо знаем, что может действительно привести в восторг.
-Ко всем мероприятиям мы подходим с огромным желанием, интресом и ответственностью.	
-У вас останутся лишь хорошие ощущения после проведенного праздика.
+Ко всем мероприятиям мы подходим с огромным желанием, интересом и ответственностью.	
+У вас останутся лишь хорошие ощущения после проведенного праздника.
 </p></div>
 </section>
 
